--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <div class="site-logo">
             <img src="https://raw.githubusercontent.com/JFT51/ExRest/refs/heads/main/laqrotte.svg" alt="La Qrotte Logo" class="company-logo">
         </div>
-        <nav class="tab-menu">
+        <button class="hamburger-menu" id="hamburgerMenu" aria-label="Menu">
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+        </button>
+        <nav class="tab-menu" id="tabMenu">
             <button class="tab-button active" data-tab="overview">Overview</button>
             <button class="tab-button" data-tab="benchmark">Hourly Benchmark</button>
             <button class="tab-button" data-tab="week-data">Week Data</button>
